fix login reminder disappear on smaller screen issue

--- a/applications/primo/custom-styles.scss
+++ b/applications/primo/custom-styles.scss
@@ -160,7 +160,11 @@ uql-connect-footer
 
 
 // login reminder bar
-
+@media screen and (max-width: 500px) {
+  #exlidHeaderSystemFeedback {
+    display: block;
+  }
+}
 // disable feedback default yellow background color
 #exlidHeaderSystemFeedback {
   background-color: transparent;
@@ -171,20 +175,21 @@ uql-connect-footer
     @include flexbox();
     justify-content: center;
     left: 0px;
-    height: 20px;
+    height: 2em;
     width: 100%;
     padding: 10px 0px;
-    margin-left:-2px;
 
     #alert-text-container {
       font-family: "Roboto", "Helvetica", "Arial", sans-serif;
       font-size: 0.9em;
       color: white;
       background-image: none;
-      padding: 0.2em 0 0 0;
-      
+      margin-top: auto;
+      margin-bottom: auto;
+
       a {
-        text-decoration: underine;
+        color: white;
+        text-decoration: underline;
       }
 
     }
@@ -197,7 +202,7 @@ uql-connect-footer
 
 #alert-icon-container {
   background-color: white;
-  top: -2px;
+  top: 2px;
   width: 1em;
   height: 1em;
   overflow: hidden;
@@ -206,7 +211,7 @@ uql-connect-footer
   box-shadow: #999 0 1px 1px;
   font-size: 25px;
   color: transparent;
-  margin-right: 8px;
+  margin-right: 5px;
   position: relative;
 }
 
